# Agent-memory-hackathon

./: .env.example  .gitignore  README.md  article.md  pyproject.toml  requirements.txt  run.ps1  run_demo.ps1
.github/workflows/: ci.yml
api/: index.py
docs/: api-reference.md  build-journal.md  linkedin-post.md  presentation-outline.md  project-documentary.md  submission-checklist.md  video-script.md
scripts/: capture_ui_screenshots.py  evaluate_learning_curve.py  live_demo_sequence.py
src/flashback_ops/: __main__.py  app.py  config.py  models.py  reasoning.py  service.py
src/flashback_ops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flashback_ops/memory/: __init__.py  base.py  hindsight_store.py  local_store.py
src/flashback_ops/web/: app.js  index.html  styles.css
tests/: test_api.py  test_scoring.py
